; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_deleteBySpaceCB.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_deleteBySpaceCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctxDeleteCB = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @deleteBySpaceCB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @deleteBySpaceCB(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ctxDeleteCB*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.ctxDeleteCB*
  store %struct.ctxDeleteCB* %9, %struct.ctxDeleteCB** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load %struct.ctxDeleteCB*, %struct.ctxDeleteCB** %7, align 8
  %12 = getelementptr inbounds %struct.ctxDeleteCB, %struct.ctxDeleteCB* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.ctxDeleteCB*, %struct.ctxDeleteCB** %7, align 8
  %15 = getelementptr inbounds %struct.ctxDeleteCB, %struct.ctxDeleteCB* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @strlen(i32 %16)
  %18 = call i32 @strncmp(i8* %10, i32 %13, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %28, label %20

20:                                               ; preds = %3
  %21 = load %struct.ctxDeleteCB*, %struct.ctxDeleteCB** %7, align 8
  %22 = getelementptr inbounds %struct.ctxDeleteCB, %struct.ctxDeleteCB* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 @sdb_remove(i32 %25, i8* %26, i32 0)
  br label %28

28:                                               ; preds = %20, %3
  ret i32 1
}

declare dso_local i32 @strncmp(i8*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @sdb_remove(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
